--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "wouterj/eloquent-bundle": "^2.2"
     },
     "config": {
         "allow-plugins": {
