--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "symfony/web-link": "6.0.*",
         "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "*",
+        "tecnickcom/tcpdf": "^6.4",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
         "wouterj/eloquent-bundle": "^2.2"
