--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,7 @@ parameters:
 
 services:
     # default configuration for services in *this* file
+    Qipsius\TCPDFBundle\Controller\TCPDFController: '@qipsius.tcpdf'
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
