change styles on create invoice page, add navbar

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "dayjs": "^1.11.5",
         "imask": "^6.4.2",
-        "string-mask": "^0.3.0"
+        "string-mask": "^0.3.0",
+        "webfontloader": "^1.6.28"
     }
 }
