move login and registration to eloquent

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,9 +6,9 @@ security:
     providers:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
-            entity:
-                class: App\Entity\Users
-                property: username
+            eloquent:
+                model: App\Model\Users
+                attribute: username
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
