--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "phpstan/phpdoc-parser": "^1.5",
         "qipsius/tcpdf-bundle": "^2.0",
         "sensio/framework-extra-bundle": "^6.1",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.0.*",
         "symfony/console": "*",
         "symfony/doctrine-messenger": "6.0.*",
