--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "dev": "encore dev",
         "build": "webpack -p --config ./resources/webpack/webpack.config.js --display-error-details",
         "watch": "webpack -d --watch --config ./resources/webpack/webpack.config.js --display-error-details",
-        "heroku-postbuild": "webpack -p --config ./resources/webpack/webpack.config.js"
+        "heroku-postbuild": "webpack --mode production --config ./resources/webpack/webpack.config.js"
     },
     "dependencies": {
         "dayjs": "^1.11.5",
