--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "scripts": {
         "dev-server": "encore dev-server",
         "dev": "encore dev",
-        "build": "webpack -p --config ./resources/webpack/webpack.config.js --display-error-details",
-        "watch": "webpack -d --watch --config ./resources/webpack/webpack.config.js --display-error-details",
-        "heroku-postbuild": "webpack --mode production --config ./resources/webpack/webpack.config.js"
+        "watch": "encore dev --watch",
+        "build": "encore production --progress"
     },
     "dependencies": {
         "dayjs": "^1.11.5",
