--- a/.env.prod
+++ b/.env.prod
@@ -43,6 +43,6 @@ DB_CONNECTION=mysql
 DB_HOST=sql8.freemysqlhosting.net
 DB_PORT=3306
 DB_DATABASE=invoice_generator
-DB_USERNAME=invoice-admin
-DB_PASSWORD=test
+DB_USERNAME=
+DB_PASSWORD=
 ###< wouterj/eloquent-bundle ###
