--- a/.env.prod
+++ b/.env.prod
@@ -40,9 +40,9 @@ DATABASE_URL='mysql://invoice-admin:test@127.0.0.1:3306/invoice_generator'
 
 ###> wouterj/eloquent-bundle ###
 DB_CONNECTION=mysql
-DB_HOST=sql8.freemysqlhosting.net
+DB_HOST=us-cdbr-east-06.cleardb.net
 DB_PORT=3306
-DB_DATABASE=invoice_generator
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=heroku_08f0c901a01d064
+DB_USERNAME=b658aeb2ff7bd5
+DB_PASSWORD=7bda3f4a
 ###< wouterj/eloquent-bundle ###
