first_commit_after_deploy

--- a/.env
+++ b/.env
@@ -40,9 +40,9 @@ DATABASE_URL='mysql://invoice-admin:test@127.0.0.1:3306/invoice_generator'
 
 ###> wouterj/eloquent-bundle ###
 DB_CONNECTION=mysql
-DB_HOST=sql8.freemysqlhosting.net
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sql8520901
-DB_USERNAME=sql8520901
-DB_PASSWORD=tjq*2CG3KlW8I3Ty
+DB_DATABASE=invoice_generator
+DB_USERNAME=invoice-admin
+DB_PASSWORD=test
 ###< wouterj/eloquent-bundle ###
