--- a/.env.prod
+++ b/.env.prod
@@ -1,8 +1,8 @@
 ###> wouterj/eloquent-bundle ###
 DB_CONNECTION=mysql
-DB_HOST=us-cdbr-east-06.cleardb.net
+DB_HOST=eu-cdbr-west-03.cleardb.net
 DB_PORT=3306
-DB_DATABASE=heroku_08f0c901a01d064
-DB_USERNAME=b658aeb2ff7bd5
-DB_PASSWORD=7bda3f4a
+DB_DATABASE=heroku_915649fdb751983
+DB_USERNAME=bea55ed9a90731
+DB_PASSWORD=32c58049
 ###< wouterj/eloquent-bundle ###
