--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -25,3 +25,4 @@ when@test:
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
+            save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
